fix(range): align the label in an item range to the center
fixes #7046

--- a/src/components/range/range.scss
+++ b/src/components/range/range.scss
@@ -15,6 +15,10 @@
 
 .item-range ion-range {
   width: 100%;
+
+  ion-label {
+    align-self: center;
+  }
 }
 
 ion-range {
